# htmlsnob

./: .gitignore  Cargo.toml  README.md  showcase.html
config_examples/: default_config.toml  default_config_attributes.toml  default_config_class_and_id.toml  default_config_content.toml  default_config_structure.toml  default_config_tags.toml  default_config_test.toml  eslint_parity_config.toml  htmlhint_parity_config.toml  htmlspec_config.toml  missing_rules.toml
default_config/: class_order.toml  default_config.toml
htmlsnob/: Cargo.toml
htmlsnob/src/: ast.rs  case_converter.rs  config.rs  dynamic_format.rs  formatter.rs  lib.rs  parser.rs  registry.rs  rule_trait.rs  rule_utils.rs  serde_expander.rs  template_language.rs  test_utils.rs  validator.rs  warning.rs
htmlsnob/src/rule_utils/: deserialize_regex.rs
htmlsnob/tests/: integration_tests.rs  mod.rs  test_block_reader.rs
htmlsnob/tests/fixtures/: autofix.html  continous_integration.html  formatting.html  no_parse_errors.html  parse_errors.html  todo_invalid.html
htmlsnob/tests/fixtures/template_languages/: eex.html.eex  ejs.html.ejs  erb.html.erb  handlebars.html.hbs  jinja2.html.jinja2  liquid.html.liquid  mustache.html.mustache  twig.html.twig
htmlsnob_cli/: Cargo.toml
htmlsnob_lsp/: Cargo.toml
htmlsnob_ruby/: Cargo.toml  Gemfile  LICENSE.txt  README.md  Rakefile  htmlsnob_ruby-0.1.0.gem  htmlsnob_ruby.gemspec
htmlsnob_ruby/ext/htmlsnob_ruby/: Cargo.toml  extconf.rb
htmlsnob_ruby/ext/htmlsnob_ruby/src/: lib.rs
htmlsnob_rules/: Cargo.toml
htmlsnob_scripts/: Cargo.toml
(+65 files in other folders)
