[package]
name = "htmlsnob"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
license = { workspace = true }
documentation = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }



[dependencies]
toml = "0.8.20"
serde = { version = "1.0", features = ["derive"] }
regex = "1.11.1"
